# dv-smith

./: .gitignore  ACCURACY_IMPROVEMENTS.md  AGENTS.md  AI_ANALYZER_FINAL.md  AI_CALLS_OVERVIEW.md  BUILD_PERFORMANCE_ANALYSIS.md  CODE_AUDIT_SUMMARY.md  COMMIT_SUMMARY.md  Dockerfile.dvsmith  FIXES_SUMMARY.md  GYM_CLEANER_REFACTOR.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  QA_REPORT.md  README.md  README_COMMANDS_TEST.md  README_VERIFICATION_REPORT.md  TODO.md  demo.sh  parse_agent_log.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: CLI_MIGRATION.md  agent-activity-visibility.md  build-command.md  claude-code-sdk.md  task-inspection.md  testbenches.md
docs/task-types/: README.md  assertion.md  coverage.md  sequence.md
docs/tutorials/: 01_getting_started.md  02_writing_agents.md  03_evaluation.md
dvsmith/: cli.py  cli_old.py  config.py  log_viewer.py
dvsmith/adapters/cov/: questa_parser.py  xcelium_parser.py
dvsmith/adapters/parse/: uvm_log.py
dvsmith/adapters/sim/: __init__.py  base.py  questa.py  xcelium.py
dvsmith/cli/: __init__.py  agent_runner.py  app.py  live_feed.py
dvsmith/cli/commands/: ai_logs.py  build.py  eval.py  ingest.py  profile_commands.py  run.py
dvsmith/config/: __init__.py  logging.py  schemas.py
dvsmith/core/: ai_analyzer.py  ai_models.py  ai_structured.py  gym_cleaner.py  models.py  repo_analyzer.py  task_generator.py  terminal_bench_scaffold.py
dvsmith/cvdp/: __init__.py  exporter.py  harness_templates.py  models.py  runner.py
dvsmith/flows/: __init__.py  ingest_flow.py  terminal_bench_flow.py
dvsmith/harness/: evaluator.py  validator.py
dvsmith/skills/: SKILLS_README.md  cadence.skill
dvsmith/skills/cadence/: SKILL.md
examples/agents/: ai_agent.py  claude_sdk_agent.py  simple_agent.py
gym/: .gitignore  README.md  run_task.py
gym/eval/: assertions_master_eval_top.sv  check_assertion_static.py  check_closure.py  check_coverpoint_task.py  check_signature.py  coverage_eval_test.sv  coverage_utils.py  eval_one.py  gen_signatures.py
gym/harness/: evaluate.py  materialize.py
gym/harness/templates/: questa_assertions_makefile
gym/stubs/: axi4_master_coverage.sv  master_assertions.sv
gym/tasks/: assert_wlast_last_beat.task.yaml  axi4_blocking_fixed_16b_write_read_test.md  cov_awaddr_alignment.task.yaml  coverage_code_awlen_x_awsize_x_awburst.task.yaml  seq_fixed_16b.task.yaml  t1_master_assertions.yaml  t2_master_coverage.yaml
gym/tasks/assert_wlast_last_beat/: description.md  task.yaml
gym/tasks/closure_40pct_60s/: description.md  task.yaml
gym/tasks/cov_awaddr_alignment/: description.md  task.yaml
gym/tasks/seq_fixed_16b/: task.yaml
runs/2025-11-04__17-05-45/: results.json  run_metadata.json
runs/2025-11-04__17-22-18/: run_metadata.json
runs/2025-11-04__17-54-22/: run_metadata.json
solutions/task_001/: apb_8b_write_test.sv  solution.patch
test_repos/test_uvm_bench/sim/: Makefile
tests/: test_ai_logging.py  test_ai_structured_helpers.py  test_ai_structured_schema.py  test_coverage_parsers.py  test_integration.py  test_models.py
thomas_tasks/: TASK_CREATION_PROCEDURE.md
thomas_tasks/axi4_blocking_32b_write_read_test/: Dockerfile  docker-compose.yaml  solution.sh  task.yaml
thomas_tasks/axi4_blocking_32b_write_read_test/resources/: AGENTS.md  clean_repo.sh  coverage_requirements.txt
thomas_tasks/axi4_blocking_incr_burst_read_test/: Dockerfile  docker-compose.yaml  run-tests.sh  solution.sh  task.yaml
thomas_tasks/axi4_blocking_incr_burst_write_read_test/: Dockerfile  docker-compose.yaml  solution.sh  task.yaml
thomas_tasks/axi4_blocking_wrap_burst_write_read_test/: Dockerfile  docker-compose.yaml  solution.sh  task.yaml
(+31 files in other folders)
